{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 42,
  "lineage": "9030a295-fd29-c08c-f28f-1dd55cb7c2da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb64ab2fd29c1663",
            "arn": "arn:aws:ec2:us-west-1:294825482201:elastic-ip/eipalloc-0eb64ab2fd29c1663",
            "domain": "vpc",
            "id": "eipalloc-0eb64ab2fd29c1663",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-215-112-237.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.112.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b788ac6bad51eb5",
            "arn": "arn:aws:ec2:us-west-1:294825482201:elastic-ip/eipalloc-09b788ac6bad51eb5",
            "domain": "vpc",
            "id": "eipalloc-09b788ac6bad51eb5",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-52-100-53.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.100.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "n8n-app-nat-us-west-1c",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nat-us-west-1c",
              "Project": "n8n-app"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:internet-gateway/igw-002abf43268a2ca0e",
            "id": "igw-002abf43268a2ca0e",
            "owner_id": "294825482201",
            "tags": {
              "Name": "n8n-app-igw",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-igw",
              "Project": "n8n-app"
            },
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb64ab2fd29c1663",
            "association_id": "eipassoc-0f5435c8b0e825864",
            "connectivity_type": "public",
            "id": "nat-07b8071f4389bb9a5",
            "network_interface_id": "eni-09efd30907f831c38",
            "private_ip": "10.0.0.92",
            "public_ip": "54.215.112.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc9bf6f7f8fb852a",
            "tags": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b788ac6bad51eb5",
            "association_id": "eipassoc-0b9a4c720598b1728",
            "connectivity_type": "public",
            "id": "nat-0a036e4b57b8aa6fb",
            "network_interface_id": "eni-0134c45aa22d10456",
            "private_ip": "10.0.1.77",
            "public_ip": "52.52.100.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039f868f03ae9893b",
            "tags": {
              "Name": "n8n-app-nat-us-west-1c",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nat-us-west-1c",
              "Project": "n8n-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:route-table/rtb-01b9e0d15fa0d3771",
            "id": "rtb-01b9e0d15fa0d3771",
            "owner_id": "294825482201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b8071f4389bb9a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n8n-app-private-rt-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-private-rt-us-west-1a",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:route-table/rtb-0a92b1de1d6905411",
            "id": "rtb-0a92b1de1d6905411",
            "owner_id": "294825482201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a036e4b57b8aa6fb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n8n-app-private-rt-us-west-1c",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-private-rt-us-west-1c",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:route-table/rtb-0085a012257b0d1b7",
            "id": "rtb-0085a012257b0d1b7",
            "owner_id": "294825482201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002abf43268a2ca0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n8n-app-public-rt",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-public-rt",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1931d0dbc0f6d81",
            "route_table_id": "rtb-01b9e0d15fa0d3771",
            "subnet_id": "subnet-025da3cb44d7600f6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000dddb2275acda81",
            "route_table_id": "rtb-0a92b1de1d6905411",
            "subnet_id": "subnet-044e65937b91513d3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03308b7113c9b044b",
            "route_table_id": "rtb-0085a012257b0d1b7",
            "subnet_id": "subnet-0dc9bf6f7f8fb852a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abb13f5ea823d755",
            "route_table_id": "rtb-0085a012257b0d1b7",
            "subnet_id": "subnet-039f868f03ae9893b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-025da3cb44d7600f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025da3cb44d7600f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-private-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-private-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-044e65937b91513d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044e65937b91513d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-private-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-private-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-0dc9bf6f7f8fb852a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc9bf6f7f8fb852a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-public-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-public-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-039f868f03ae9893b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f868f03ae9893b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-public-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-public-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03e20713d88ef167d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:vpc/vpc-03e20713d88ef167d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02228527574a8f282",
            "default_route_table_id": "rtb-0493b9e67aa4d569f",
            "default_security_group_id": "sg-0b2b3e05000111f97",
            "dhcp_options_id": "dopt-019569d9fc18d0560",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e20713d88ef167d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0493b9e67aa4d569f",
            "owner_id": "294825482201",
            "tags": {
              "Name": "n8n-app-vpc",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "n8n-app-vpc",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}